--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,4 @@
+set (CMAKE_CXX_FLAGS "-Wall -O3ggdb3  -std=c++17")
 cmake_minimum_required(VERSION 2.8.9)
 project (cppcon)
 add_executable(fizzbuzz fizzbuzz.cpp)
