switched to new project, lcg using coroutine

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,12 @@
-set (CMAKE_CXX_FLAGS "-Wall -O3ggdb3  -std=c++17")
-cmake_minimum_required(VERSION 2.8.9)
+cmake_minimum_required(VERSION 2.8.12)
+add_compile_options(-std=c++17) # add_compile_options instead of CMAKE_CXX_FLAGS in CMake 2.8.12 or newer
+add_compile_options(-Wall)      # add_compile_options instead of CMAKE_CXX_FLAGS in CMake 2.8.12 or newer
+add_compile_options(-ggdb3)     # add_compile_options instead of CMAKE_CXX_FLAGS in CMake 2.8.12 or newer
 project (cppcon)
-add_executable(fizzbuzz fizzbuzz.cpp)
+find_package(Boost 1.68 COMPONENTS coroutine context REQUIRED)
+if(Boost_FOUND)
+  include_directories(${Boost_INCLUDE_DIRS})
+  add_executable(lcg lcg.cpp)
+    TARGET_LINK_LIBRARIES(lcg ${MANDATORY_LIBRARIES} boost_coroutine boost_context)
+endif()
+
