ignore swap files, rename lcg to fibb.cpp

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,8 +5,7 @@ add_compile_options(-ggdb3)     # add_compile_options instead of CMAKE_CXX_FLAGS
 project (cppcon)
 find_package(Boost 1.68 COMPONENTS coroutine context REQUIRED)
 if(Boost_FOUND)
-  include_directories(${Boost_INCLUDE_DIRS})
-  add_executable(lcg lcg.cpp)
-    TARGET_LINK_LIBRARIES(lcg ${MANDATORY_LIBRARIES} boost_coroutine boost_context)
+  add_executable(fibb fibb.cpp)
+  TARGET_LINK_LIBRARIES(fibb ${MANDATORY_LIBRARIES} boost_coroutine boost_context)
 endif()
 
