got threaded code running. some cleanup, and build mods

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,8 +4,11 @@ add_compile_options(-Wall)      # add_compile_options instead of CMAKE_CXX_FLAGS
 add_compile_options(-ggdb3)     # add_compile_options instead of CMAKE_CXX_FLAGS in CMake 2.8.12 or newer
 project (cppcon)
 find_package(Boost 1.68 COMPONENTS coroutine context REQUIRED)
+find_package (Threads)
 if(Boost_FOUND)
   add_executable(fibb fibb.cpp)
   TARGET_LINK_LIBRARIES(fibb ${MANDATORY_LIBRARIES} boost_coroutine boost_context)
 endif()
 add_executable(threaded threaded.cpp)
+target_link_libraries(threaded pthread)
+
